--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ image = "0.24.6"
 ipipe = "0.11.7"
 mp4 = "0.13.0"
 poll-promise = "0.2.0"
+parking_lot = "0.12.1"
+once_cell = "1.18.0"
 rfd = "0.11.4"
 serde_json = "1.0.96"
 tempfile = "3.5.0"
