--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,8 @@ once_cell = "1.18.0"
 rfd = "0.11.4"
 serde_json = "1.0.96"
 tempfile = "3.5.0"
-egui-notify = { git = "https://github.com/n00kii/songdl" }
+egui-notify = { git = "https://github.com/n00kii/egui-notify" }
 serde = "1.0.163"
 figment = { version = "0.10.9", features = [ "toml" ] }
 toml = "0.7.4"
+regex = "1.8.4"
