--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ egui_extras = "0.22.0"
 image = "0.24.6"
 ipipe = "0.11.7"
 mp4 = "0.13.0"
-poll-promise = "0.2.0"
+poll-promise = { git = "https://github.com/EmbarkStudios/poll-promise" }
 parking_lot = "0.12.1"
 once_cell = "1.18.0"
 rfd = "0.11.4"
@@ -26,3 +26,4 @@ serde = "1.0.163"
 figment = { version = "0.10.9", features = [ "toml" ] }
 toml = "0.7.4"
 regex = "1.8.4"
+kira = "0.8.4"
